--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ReservarProduto.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ReservarProduto.form
@@ -138,6 +138,9 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="campoTelefoneKeyReleased"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
