--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarFuncionario.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarFuncionario.form
@@ -315,6 +315,10 @@
                   <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTable()"/>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
