--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/CadastroProduto.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/CadastroProduto.form
@@ -334,6 +334,7 @@
           </Properties>
           <Events>
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="campoPrecoKeyPressed"/>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="campoPrecoKeyReleased"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="campoFornecedor">
